# keypal

./: .gitignore  AGENTS.md  README.md  behavior-system.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: plugin-system.md
docs/superpowers/specs/: 2026-06-22-sticker-redesign-design.md
prompt/: pixel-art-prompt.md
src/: App.test.tsx  App.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  keylistener.rs  lib.rs  main.rs
src/components/: ContextMenu.tsx  HoverToolbar.tsx  Pet.test.tsx  Pet.tsx  PetView.test.tsx  PetView.tsx  SettingsPanel.tsx  SpeechBubble.test.tsx  SpeechBubble.tsx
src/hooks/: useBehavior.test.ts  useBehavior.ts  useDrag.ts  useKeyboardData.ts
src/lib/: aiClient.test.ts  aiClient.ts  behaviorExecutor.ts  brainEngine.test.ts  brainEngine.ts  config.ts  log.ts  moodEngine.ts  speechScheduler.ts  spriteGenerator.test.ts  spriteGenerator.ts  spritesheet.test.ts  spritesheet.ts  types.ts  walkController.test.ts  walkController.ts
src/lib/actions/: idle.ts  index.ts  jump.ts  sleep.ts  snore.ts  spin.ts  walk.ts  yawn.ts
src/lib/animations/: driver.test.ts  driver.ts  registry.ts
src/lib/behaviors/: composite.ts  idle.ts  index.ts  jump.ts  sequence.ts  sleep.ts  snore.ts  speak.ts  spin.ts  types.ts  walk.ts  yawn.ts
src/lib/emotions/: index.ts
src/lib/petArt/: cat.tsx  chick.tsx  dog.tsx  frog.tsx  index.ts  types.ts
src/lib/plugins/: index.ts  plugins.test.ts  registry.test.ts  registry.ts  types.ts
src/lib/ui/: tokens.ts
(+11 files in other folders)
