[package]
name = "keypal"
version = "0.1.0"
description = "KeyPal - desktop typing pet"
authors = ["KeyPal"]
edition = "2021"

[lib]
name = "keypal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
